--- a/catpage.css
+++ b/catpage.css
@@ -39,6 +39,38 @@
 #content img {
   display: block; }
 
+.flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+  .flex > div {
+    width: 50%;
+    outline: 1px solid grey;
+    -webkit-flex-grow: 1;
+    -moz-flex-grow: 1;
+    flex-grow: 1;
+    -ms-flex-positive: 1;
+    -webkit-flex-shrink: 1;
+    -moz-flex-shrink: 1;
+    flex-shrink: 1;
+    -ms-flex-negative: 1;
+    -webkit-flex-basis: auto;
+    -moz-flex-basis: auto;
+    flex-basis: auto;
+    -ms-flex-preferred-size: auto; }
+
 #shop {
   margin: auto;
   text-align: center;
@@ -129,3 +161,5 @@
   -moz-align-content: flex-start;
   align-content: flex-start;
   -ms-flex-line-pack: start; }
+
+/*# sourceMappingURL=catpage.css.map */
