--- a/catpage.sass
+++ b/catpage.sass
@@ -118,3 +118,12 @@
 	+align-items(baseline)
 	padding: 20px 0
 	+align-content(flex-start)
+.row
+	border: 1px solid pink
+	clear: both
+	height: auto
+	overflow: auto
+	margin-top: 5px
+	img
+		margin: null 10px 10px null
+		float: left
