--- a/landing.sass
+++ b/landing.sass
@@ -9,7 +9,8 @@ html
 
 .cat-table
 	border: 11px solid #ECEBE7
-	font-family: Arial, Helvetica, sans-serif
+	font-family: "proxima-nova" !important
+	font-size: 14px
 	color: #696768
 	padding: 5px
 	width: 800px
@@ -34,7 +35,7 @@ html
 	a
 		color: white
 		font-size: 16px
-		font-family: Futura, Futura-Medium, "Futura Medium", "Century Gothic", CenturyGothic, "Apple Gothic", AppleGothic, "URW Gothic L", "Avant Garde", sans-serif
+		font-family: "proxima-nova" !important
 		text-decoration: none
 		display: block
 		width: 100%
