--- a/catpage.sass
+++ b/catpage.sass
@@ -8,10 +8,16 @@
 	a
 		color: #EC5189
 		font-family: "proxima-nova"
+		-webkit-font-smoothing: antialiased
+		-moz-osx-font-smoothing: grayscale
 	p
 		font-family: "raleway"
+		-webkit-font-smoothing: antialiased
+		-moz-osx-font-smoothing: grayscale
 	h1, h2, h3, h4, h5, h6
 		font-family: "proxima-nova"
+		-webkit-font-smoothing: antialiased
+		-moz-osx-font-smoothing: grayscale
 		font-weight: bold
 
 
